# propertylistings

./: .gitignore  README.md  listings.py  requirements.txt  resources.py  scraper.py  setup.cfg  setup.py  test_listings.py
listings/: __init__.py  resources.py  scraper.py  utilities.py
listings/scripts/: __init__.py  listings.py
propertylistings/: __init__.py  archive.py  properties_scraper.py  resources.py
propertylistings/scripts/: __init__.py  propertylistings.py
tests/: test_listings.py
