[metadata]
name = propertylistings
version = 0.1.0
author = Christopher Christofi
author_email = christopherlchristofi@outlook.com
description = Webscraping tool for archiving sales records on RightMove.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christopher-christofi/propertylistings
project_urls =
    Bug Tracker = https://github.com/christopher-christofi/propertylistings/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >=3.0
